cocogen/tests/fail/missing_uid_trav.ccn

start phase hello {
    actions {
        pass p;
    }
};

traversal missinguid {
    nodes = {ast2}
};

root node ast2 {
    attributes {
        int val
    }
};
